# mdevctl

./: .gitignore  60-mdevctl.rules  60-persistent-mdev.rules  Cargo.toml  Makefile  Makefile.in  README  README.md  build.rs  logger.sh  mdev@.service  mdevctl  mdevctl.8  mdevctl.conf  mdevctl.libexec  mdevctl.rst  mdevctl.sbin  mdevctl.spec.in  rust-mdevctl.spec  rust-mdevctl.spec.in
.cargo/: config.toml
.github/workflows/: main.yml  release.yml
src/: callouts.rs  cli.rs  environment.rs  logger.rs  main.rs  mdev.rs  tests.rs
src/tests/: callouts.rs  define.rs  list.rs  mod.rs  modify.rs  startstop.rs  types.rs
testdata/callouts/: live-rc1.sh  modify-active.sh  rc1.sh  template.sh  ver-rc0.sh
testdata/define/: uuid-running-removed-active-parent.expected
testdata/list/: active-callout.json  active-parent-verbose-removed-active-parent.json  active-uuid-parent-verbose-removed-active-mdev-type.json  active-uuid-verbose-removed-active-mdev-type.text  active-verbose.text  defined-parent-verbose.text  device2.json
testdata/modify/: modified.json
testdata/types/: full.json
tests/: roundtrip_test
tests/callouts/: bad-json.sh  good-json-null-terminated.sh  good-json.sh  live-rc0.sh  live-rc1.sh  modify-active.sh  params.sh  rc0.sh  rc1.sh  rc2.sh  template.sh  type-a.sh  type-b.sh  type-c.sh  ver-rc0-get-attr-bad-json.sh  ver-rc0.sh  ver-rc1.sh
tests/define/no-uuid/: expected
tests/define/uuid-manual/: expected
tests/list/: active.json  defined-parent-verbose.json  defined-uuid-parent-verbose.text  defined-verbose.text
tests/list/default/: active-parent.text  active-uuid-verbose.json  defined-parent-verbose.json  defined-parent-verbose.text  defined-parent.text  defined-uuid-parent.json  defined-uuid-parent.text  defined-uuid-verbose.json  defined-uuid-verbose.text  defined-uuid.text  defined-verbose.json  defined-verbose.text  defined.json  defined.text
tests/load-json/: c07ab7b2-8aa2-427a-91c6-ffc949bb77f9.in
tests/load-json/5269fe7a-18d1-48ad-88e1-3fda4176f536/: 5269fe7a-18d1-48ad-88e1-3fda4176f536.in  5269fe7a-18d1-48ad-88e1-3fda4176f536.out
tests/load-json/c07ab7b2-8aa2-427a-91c6-ffc949bb77f9/: c07ab7b2-8aa2-427a-91c6-ffc949bb77f9.out
tests/modify/: callout-fail-force.expected  defined-only.active.expected  defined-only.defined.expected  modify-jsonfile-with-version-callout-multiple-with-version-pass.expected
tests/modify/addattr/: expected
tests/modify/delattr/: expected
tests/modify/delattr-noindex/: expected
tests/modify/manual/: defined.json  expected
tests/modify/mdev_type/: expected
tests/start/defined-multiple-underspecified/: defined.json
tests/types/: parent-match-2.text  parent-match-3.json
tests/types/default/: full.text  parent-match-1.json  parent-match-1.text  parent-match-2.json  parent-match-3.text
(+1 files in other folders)
