[package]
name = "mdevctl"
# For now, just bump the y version on release (x.y.z)
version = "1.2.0"
authors = ["Jonathon Jongsma <jjongsma@redhat.com>"]
edition = "2018"
license = "LGPL-2.1"
description = "A mediated device management utility for Linux"
repository = "https://github.com/mdevctl/mdevctl"
homepage = "https://github.com/mdevctl/mdevctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"]}
env_logger = "0.8.3"
log = "0.4"
serde_json = {version = "1.0", features = ["preserve_order"]}
uuid = {version = "0.8.2", features = ["v4"]}
tempfile = "3"

[build-dependencies]
clap = { version = "3.1.18", features = ["derive"]}
clap_complete = "3.0.6"
uuid = "0.8.2"

[dev-dependencies]
nix = "0.25.0"
libc = "0.2"
