[package]
name = "mdevctl"
# For now, just bump the y version on release (x.y.z)
version = "1.3.0"
authors = ["Jonathon Jongsma <jjongsma@redhat.com>"]
edition = "2018"
license = "LGPL-2.1"
description = "A mediated device management utility for Linux"
repository = "https://github.com/mdevctl/mdevctl"
homepage = "https://github.com/mdevctl/mdevctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"]}
env_logger = "0.8.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
serial_test = { version = "1.0.0" }
uuid = {version = "1.0", features = ["v4"]}
tempfile = "3"

[build-dependencies]
clap = { version = "3.1.18", features = ["derive"]}
clap_complete = "3.0.6"
uuid = "1.0"

[dev-dependencies]
nix = "0.26"
libc = "0.2"
